# checklists

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: build-checklists.yml
css/: checklist.css
pandoc/: defaults.yaml
scripts/: download_fonts.py
src/archer-ii-g5-mph/: archer-ii-g5-mph-readme.md
src/c172-ifr/: c172-ifr-flight-checklist-1.html  c172-ifr-preflight-checklist-1.html  c172-ifr-readme.md
