[project]
name = "checklists"
version = "0.1.0"
description = "Aviation checklists generator"
requires-python = ">=3.9"
dependencies = [
    "weasyprint>=62.0",
    "pypandoc-binary>=1.13",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
